add category validation and sort by completed/not completed fix

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -25,3 +25,10 @@ section {
   flex-direction: column;
   gap: 15px;
 }
+
+.mobile {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
