--- a/src/components/ToDoList/ToDoList.module.css
+++ b/src/components/ToDoList/ToDoList.module.css
@@ -55,6 +55,23 @@
   color: #555555;
 }
 
+.select {
+  width: 100px;
+  height: 100%;
+  background: #1b1b1b;
+  border-color: transparent;
+  border-radius: 0px;
+}
+
+.select:focus {
+  outline: none;
+}
+
 .list-button {
   background: #1b1b1b;
+}
+
+.list-button-disabled {
+  background: #212121;
+  cursor: default;
 }
