--- a/src/components/NewToDo/NewToDo.module.css
+++ b/src/components/NewToDo/NewToDo.module.css
@@ -29,8 +29,8 @@
 }
 
 .select:focus {
-  border: 1px solid #bebebe;
   outline: none;
+  /* border: 1px solid #bebebe; */
 }
 
 .new-to-do-button {
