--- a/src/components/ToDoList/ToDoList.module.css
+++ b/src/components/ToDoList/ToDoList.module.css
@@ -5,6 +5,12 @@
   padding-left: 25px;
 }
 
+/* .title {
+  background: #303030;
+  padding: 10px;
+  margin-bottom: 15px;
+} */
+
 .sort-container {
   display: flex;
   gap: 20px;
