--- a/src/components/ToDoList/ToDoList.module.css
+++ b/src/components/ToDoList/ToDoList.module.css
@@ -5,11 +5,25 @@
   padding-left: 25px;
 }
 
-/* .title {
+.title-container {
+  display: flex;
+  justify-content: space-between;
   background: #303030;
-  padding: 10px;
+  padding: 8px;
   margin-bottom: 15px;
-} */
+}
+
+.show-hide {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  cursor: pointer;
+}
+
+.title svg {
+  height: 100%;
+  cursor: pointer;
+}
 
 .sort-container {
   display: flex;
