--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,8 +1,10 @@
 .container {
-  width: 100%;
-  height: 145px;
+  width: -webkit-fill-available;
+  padding-top: 50px;
+  padding-bottom: 50px;
   display: flex;
-  align-items: flex-end;
+  justify-content: flex-end;
+  align-items: end;
   border-bottom: 1px #d4d4d4;
   border-bottom-style: solid;
   position: fixed;
@@ -14,7 +16,5 @@
 }
 
 .container h1 {
-  position: fixed;
-  right: 0;
-  padding: 25px;
+  padding-right: 25px;
 }
