--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,10 +1,11 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 250px;
+  height: 100%;
+  width: 268px;
   background: #1b1b1b;
   overflow: auto;
+  overflow-x: hidden;
   position: fixed;
   border-right: 1px #d4d4d4;
   border-right-style: solid;
@@ -14,7 +15,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 145px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   border-bottom: 1px #d4d4d4;
   border-bottom-style: solid;
 }
