--- a/src/App.module.css
+++ b/src/App.module.css
@@ -28,6 +28,12 @@ section {
   gap: 15px;
 }
 
+@media only screen and (max-width: 850px) {
+  section {
+    margin-left: 0px;
+  }
+}
+
 .mobile {
   height: 100vh;
   display: flex;
