--- a/src/components/ToDoList/ToDoList.module.css
+++ b/src/components/ToDoList/ToDoList.module.css
@@ -51,6 +51,7 @@
 
 .sort-item {
   display: flex;
+  align-items: center;
   gap: 5px;
 }
 
@@ -63,6 +64,7 @@
 
 .todo-container {
   display: flex;
+  align-items: center;
   gap: 10px;
   width: 100%;
   height: 100%;
@@ -90,6 +92,7 @@
   background: #1b1b1b;
   color: #ffffff;
   width: 100%;
+  height: 100%;
   padding-left: 10px;
 }
 
