small bug fix and tweaks

--- a/src/components/ToDoList/List/ToDoList.module.css
+++ b/src/components/ToDoList/List/ToDoList.module.css
@@ -35,3 +35,13 @@
 .title svg {
   height: 100%;
 }
+
+.deleted-search {
+  margin-top: 160px;
+}
+
+@media only screen and (max-width: 850px) {
+  .deleted-search {
+    margin-top: 80px;
+  }
+}
