--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,10 +1,9 @@
 .container {
-  width: -webkit-fill-available;
+  width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  /* display: flex;   */
+  padding-left: 25px;
   border-bottom: 1px #d4d4d4;
   border-bottom-style: solid;
   position: fixed;
@@ -16,7 +15,7 @@
 }
 
 .container h1 {
-  padding-right: 25px;
+  width: 100%;
 }
 
 .container svg {
